# Shooting-Game

./: CMakeLists.txt  README.md  Shooting-Game-2023.sln
Header Files/: Game.h  Player.h
Shooting-Game-2023/: Bullet.cpp  Bullet.h  Enemy.cpp  Enemy.h  Game.cpp  Game.h  Player.cpp  Player.h  Shooting-Game-2023.vcxproj  main.cpp
Shooting-Game-2023/Debug/: Shooting-Game-2023.exe.recipe  Shooting-Game-2023.ilk  game.obj.enc  vc143.idb
Shooting-Game-2023/Debug/Shooting.edf0c34a.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Shooting-Game-2023.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Shooting-Game-2023/x64/Debug/: Shooting-Game-2023.exe.recipe  Shooting-Game-2023.ilk  vc143.idb
Shooting-Game-2023/x64/Debug/Shooting.edf0c34a.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Shooting-Game-2023.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Source Files/: Game.cpp  Player.cpp  main.cpp
